@@ -28,7 +28,7 @@ use IPC::Open3;
 use Amanda::Util qw( :constants );
 use Amanda::Config qw( :init :getconf );
 use Amanda::Paths;
-use Amanda::Logfile qw( log_rename get_current_log_timestamp $amanda_log_trace_log );
+use Amanda::Util qw ( match_disk );
 use Amanda::Debug qw( debug );
 
 Amanda::Util::setup_application("amdump_client", "client", $CONTEXT_CMDLINE);
@@ -95,7 +95,7 @@ if ($cmd eq 'list') {
         #find the diskname that match
 	for (my $i=1; $i <= $#ARGV; $i++) {
 	    for my $diskname (@disks) {
-		if (Amanda::Logfile::match_disk($ARGV[$i], $diskname)) {
+		if (match_disk($ARGV[$i], $diskname)) {
 		    debug("send: DISK " . Amanda::Util::quote_string($diskname));
 		    print {$amservice_in} "DISK " . Amanda::Util::quote_string($diskname) . "\n";
 		    my $a = <$amservice_out>;
@@ -118,7 +118,7 @@ if ($cmd eq 'list') {
         #find the diskname that match
 	for (my $i=1; $i <= $#ARGV; $i++) {
 	    for my $diskname (@disks) {
-		if (Amanda::Logfile::match_disk($ARGV[$i], $diskname)) {
+		if (match_disk($ARGV[$i], $diskname)) {
 		    debug("send: DISK " . Amanda::Util::quote_string($diskname));
 		    print {$amservice_in} "DISK " . Amanda::Util::quote_string($diskname) . "\n";
 		    my $a = <$amservice_out>;
