@@ -401,11 +401,10 @@ TODO: add_dump
 
 =cut
 
-use Amanda::Logfile qw( :constants match_disk match_host
-			match_datestamp match_level );
+use Amanda::Logfile qw( :constants );
 use Amanda::Tapelist;
 use Amanda::Config qw( :init :getconf config_dir_relative );
-use Amanda::Util qw( quote_string weaken_ref );
+use Amanda::Util qw( quote_string weaken_ref match_disk match_host match_datestamp match_level);
 use File::Glob qw( :glob );
 use warnings;
 use strict;
