@@ -108,8 +108,8 @@ use Amanda::Changer qw( :constants );
 use Amanda::Cmdline;
 use Amanda::Paths;
 use Amanda::Logfile qw( :logtype_t log_add log_add_full
-			log_rename $amanda_log_trace_log make_stats
-			match_datestamp match_level );
+			log_rename $amanda_log_trace_log make_stats );
+use Amanda::Util qw ( match_datestamp match_level );
 
 use base qw(
     Amanda::Recovery::Clerk::Feedback
